# libmcmap

./: .gitignore  Block.cpp  Block.h  BlockMaps.cpp  BlockMaps.h  CMakeLists.txt  Chunk.cpp  Chunk.h  KDTree.h  Map.cpp  Map.h  Player.cpp  README.md  Region.cpp  Region.h  Util.h  scrapeitemdata.pl  update-data-ids.pl
cmake/: LibMCMapConfig.cmake.in  LibMCMapConfigVersion.cmake.in
include/: Block.h  BlockAddress.h  BlockInfo.h  BlockMaps.h  BlockState.h  BlockStateValue.h  BlockStateValueConvert.h  Chunk.h  ChunkSection.h  CustomVertex.h  Debug.h  KDTree.h  Level.h  MCRegion.h  Map.h  Minecraft.h  PairHash.h  Player.h  Util.h
include/MCModel/: Face.h  Rotation.h  Variant.h
include/Model/: Coords.h  Element.h  Face.h  Model.h  Rotation.h  Variant.h
mapviewer/include/MCModel/: Coords.h  Element.h  Model.h  Rotation.h
mapviewer/src/MCModel/: Element.cpp  Face.cpp
src/: Block.cpp  BlockMaps.cpp  BlockState.cpp  BlockStateValue.cpp  Chunk.cpp  ChunkSection.cpp  Level.cpp  MCRegion.cpp  Map.cpp  Minecraft.cpp  PairHash.cpp
src/MCModel/: Element.cpp  Face.cpp  Model.cpp  Rotation.cpp  Variant.cpp
src/Model/: Element.cpp  Face.cpp  Model.cpp  Rotation.cpp  Variant.cpp
